# Master_IA_Subject

./: CMakeLists.txt
activities/: ACT04_FinalCastle.md
include/containers/: vector.hpp
include/engine/: debug_draw.h  defines.h  game.h  math.h  scene.h  scene_manager.h  text_sprite.h  texture.h  ui_manager.h
include/ia/: agent.h  body.h  defines.h  door.h  map.h  mind.h  scene_path.h  scene_steering.h  world.h  world_opt.h  world_path.h  world_steering.h
include/ia/final/: agent_manager.h  body.h  guard_manager.h  message_manager.h  mind.h  mind_guard.h  mind_slave.h  mind_soldier.h  scene.h  slave_manager.h  soldier_manager.h  world.h
include/ia/flocking/: agent.h  alignment.h  body.h  cohesion.h  flocking_manager.h  mind.h  scene.h  separation.h  world.h
include/ia/movement/: movement.h
include/ia/movement/kinematic/: kinematicarrive.h  kinematicflee.h  kinematicseek.h  kinematicwander.h
include/ia/movement/steering/: align.h  arrive.h  flee.h  seek.h  velocity_matching.h
include/ia/movement/steering/delegated/: face.h  lookgoing.h  pursue.h  wander.h
include/ia/path_finding/: path_finding.h  path_manager.h
include/ia/pathfinding/: binary_heap.h  body.h  map.h  map_world.h  mind.h  path_finding.h  path_manager.h  scene.h  world.h
include/ia/steering/: body.h  mind.h  scene.h  world.h
include/net/: commands.h
projects/ACT01/: main.cpp
projects/ACT02_Client/: main.cpp
projects/ACT02_Server/: main.cpp
projects/ACT03/: main.cpp
projects/ACT04/: main.cpp
projects/AG03/: main.cpp
projects/OPT01/: main.cpp
src/engine/: debug_draw.cc  game.cc  scene_manager.cc  texture.cc  ui_manager.cc
src/ia/: agent.cc  body.cc  door.cc  mind.cc  scene_path.cc  scene_steering.cc
src/ia/final/: agent_manager.cc  body.cc  guard_manager.cc  mind.cc  mind_guard.cc  mind_slave.cc  mind_soldier.cc  scene.cc  slave_manager.cc  soldier_manager.cc  world.cc
src/ia/flocking/: body.cc  flocking_body.cc  flocking_manager.cc  mind.cc  scene.cc
src/ia/path_finding/: path_finding.cc  path_manager.cc
src/ia/pathfinding/: body.cc  map_world.cc  mind.cc  path_finding.cc  path_manager.cc  scene.cc
src/ia/steering/: body.cc  mind.cc  scene.cc
